--- a/app/resources/scss/partials/_player.scss
+++ b/app/resources/scss/partials/_player.scss
@@ -1,7 +1,6 @@
 #player {
   max-width: 100%;
   min-width: 100%;
-  padding-top: 56.25%;
   background: $navy-color;
 
   .vjs-big-play-button{
